ajout des variables et modification des valeurs

--- a/src/styles/settings/colors.scss
+++ b/src/styles/settings/colors.scss
@@ -8,6 +8,5 @@
     --color-black: #000;
 
     // Couleurs du projet
-    --color-primary: tomato;
-    --color-bg-primary: #e2e2e2;
+    --color-primary: #f26419;
 }
