section labo terminé

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,3 +31,5 @@
 @import 'components/icons';
 @import 'components/header';
 @import 'components/hero';
+@import 'components/labo';
+@import 'components/btn';
