--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -19,9 +19,6 @@
     }
 }
 
-.hero__content {
-}
-
 .hero__media {
     position: absolute;
     top: 0;
@@ -32,6 +29,7 @@
     z-index: -1;
 
     img {
+        display: block;
         height: 100%;
         width: 100%;
         object-fit: cover;
