--- a/src/styles/components/btn.scss
+++ b/src/styles/components/btn.scss
@@ -19,3 +19,12 @@
         text-decoration: none;
     }
 }
+
+.reactif {
+    background-color: var(--color-white);
+
+    &:hover {
+        background-color: var(--color-black);
+        text-decoration: none;
+    }
+}
