--- a/src/styles/components/labo_reactif.scss
+++ b/src/styles/components/labo_reactif.scss
@@ -39,4 +39,14 @@
             }
         }
     }
+
+    .swiper-pagination {
+        position: static;
+        --swiper-pagination-color: var(--color-white);
+        --swiper-pagination-inactive-color: var(--color-black);
+
+        --swiper-pagination-bullet-height: 20px;
+        --swiper-pagination-bullet-width: 20px;
+        --swiper-pagination-bullet-horizontal-gap: 10px;
+    }
 }
