--- a/src/styles/components/labo_reactif.scss
+++ b/src/styles/components/labo_reactif.scss
@@ -50,3 +50,9 @@
         --swiper-pagination-bullet-horizontal-gap: 10px;
     }
 }
+
+@media (width <= $breakpoint-md) {
+    .labo_reactif {
+        padding: 80px 30px;
+    }
+}
