--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -18,7 +18,7 @@
         }
 
         .contact {
-            font-size: 56px;
+            font-size: typo(52px, 54px);
             color: rgb(255, 255, 255, 0.55);
             margin: 0;
         }
@@ -40,5 +40,11 @@
             color: rgb(255, 255, 255, 0.55);
             font-size: 48px;
         }
+    }
+}
+
+@media (width <= $breakpoint-md) {
+    .footer {
+        padding: 40px 30px;
     }
 }
