--- a/src/styles/components/labo_reactif.scss
+++ b/src/styles/components/labo_reactif.scss
@@ -47,7 +47,12 @@
 
         --swiper-pagination-bullet-height: 20px;
         --swiper-pagination-bullet-width: 20px;
-        --swiper-pagination-bullet-horizontal-gap: 10px;
+        --swiper-pagination-bullet-horizontal-gap: 20px;
+
+        .swiper-pagination-bullet {
+            border-radius: 0;
+            transform: rotate(45deg);
+        }
     }
 }
 
